utilities/stringify_attr/src/tests/derive/container.stderr
error: Expected a list
  --> $DIR/container.rs:19:22
   |
19 |     #[stringify_attr(serde)]
   |                      ^^^^^
